# neurodex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
claude-code/commands/: neurodex.md
claude-code/skills/engram/: SKILL.md
claude-code/skills/neurodex/: SKILL.md
engram/: __init__.py  __main__.py  brain.py  chunker.py  cli.py  config.py  contracts.py  impact.py  indexer.py  languages.py  reconciler.py  registry.py  search.py  server.py  watcher.py  workspace.py
neurodex/: __init__.py  __main__.py  brain.py  chunker.py  cli.py  config.py  contracts.py  impact.py  indexer.py  project.py  reconciler.py  registry.py  search.py  server.py  store.py  synonyms.py  viz.py  watcher.py  workspace.py
tests/: benchmark_after_all_fixes.json  benchmark_after_language_refactor.json  benchmark_baseline_(before_fixes).json  benchmark_contentplatform.py  benchmark_final.json  benchmark_final:_edges_+_impact_+_flows.json  benchmark_final_clean.json  benchmark_gakkodeck.py  benchmark_post_cleanup.json  benchmark_tuned_weights_v2.json  benchmark_with_tree-sitter_+_18_languages.json
